update testemonial section

--- a/faq.html
+++ b/faq.html
@@ -427,6 +427,7 @@
                                     <li>бул. Сан Стефано 107, гр. Бургас</li>
                                     <li>info@marnikstroy.com</li>
                                     <li>088 890 4050</li>
+                                    <li>088 620 1406</li>
                                 </ul>
 
                             </div>
@@ -439,7 +440,7 @@
                                 <ul>
                                     <li><a href="index.html">Начало</a></li>
                                     <li><a href="about.html">За нас</a></li>
-                                    <li><a href="project-grid.html">Проекти</a></li>
+                                    <li><a href="services.html">Услуги</a></li>
                                     <li><a href="contact.html">Контакти</a></li>
                                 </ul>
                             </div>
