--- a/index.html
+++ b/index.html
@@ -611,7 +611,8 @@
                                         най-високо качество и резултати.
                                     </h3>
                                     <p>
-                                        <strong>Да предлагаме перфектна услуга, удовлетворяваща изискванията на нашите клиенти!</strong>
+                                        <strong>Да предлагаме перфектна услуга, удовлетворяваща изискванията на нашите
+                                            клиенти!</strong>
                                     </p>
                                     <p>
                                         Опитът води до качество!
@@ -774,7 +775,7 @@
             <!-- OUR VALUE END -->
 
             <!-- OUR MISSION START -->
-            
+
             <!-- OUR MISSION  END -->
 
             <!-- OUR SERVICES START -->
@@ -929,7 +930,7 @@
             <!-- CALL US SECTION END -->
 
             <!-- OUR PROJECT START -->
-            
+
             <!-- OUR PROJECT END -->
 
             <!-- OUR BLOG START -->
@@ -960,22 +961,16 @@
                                     <div class="block-shadow bg-white p-a30">
                                         <div class="testimonial-detail clearfix">
                                             <div class="testimonial-pic radius shadow scale-in-center">
-                                                <img src="images/testimonials/pic1.jpg" width="100" height="100"
+                                                <img src="images/testimonials/pic1.png" width="100" height="100"
                                                     alt="" />
                                             </div>
-                                            <h4 class="testimonial-name m-b5">Иво Козата -</h4>
+                                            <h4 class="testimonial-name m-b5">Галина Везенкова</h4>
                                             <span class="testimonial-position">Изграждане на офис в мезонет</span>
                                         </div>
                                         <div class="testimonial-text">
                                             <span class="fa fa-quote-right"></span>
                                             <p>
-                                                Любомир беше професионалист още от първия ангажимент,
-                                                той предложи ясно писмено предложение за разбиване на
-                                                всички трудови и материални разходи. Любомир работи
-                                                много усърдно, вършейки висококачествена работа, като
-                                                внимаваше много, за да избегне евентуални проблеми.
-                                                Силно бих го препоръчал и лично аз ще го използвам за
-                                                всички бъдещи проекти.
+                                                "Много добри професионалисти.Работят бързо и качествено."
                                             </p>
                                         </div>
                                     </div>
@@ -986,18 +981,17 @@
                                     <div class="block-shadow bg-white p-a30">
                                         <div class="testimonial-detail clearfix">
                                             <div class="testimonial-pic radius shadow scale-in-center">
-                                                <img src="images/testimonials/pic2.jpg" width="100" height="100"
+                                                <img src="images/testimonials/pic2.png" width="100" height="100"
                                                     alt="" />
                                             </div>
-                                            <h4 class="testimonial-name m-b5">Прасчо Шопарски -</h4>
-                                            <span class="testimonial-position">Монтаж на врати</span>
+                                            <h4 class="testimonial-name m-b5">Диана Пелаева</h4>
+                                            <span class="testimonial-position">Ремонт на Апартамент</span>
                                         </div>
                                         <div class="testimonial-text">
                                             <span class="fa fa-quote-right"></span>
                                             <p>
-                                                Много добра комуникация. Нищо не беше твърде сложно за него. Стандартът
-                                                на работата беше много добър. Работата беше завършена на време. С радост
-                                                бих препоръчала за дърводелска работа. Много конкурентни цени също.
+                                                "Бригадата е супер. Правихме цялостен ремонт на апартамента. Дават
+                                                адекватни и практични решения съобразени с нашите желания."
                                             </p>
                                         </div>
                                     </div>
@@ -1008,19 +1002,16 @@
                                     <div class="block-shadow bg-white p-a30">
                                         <div class="testimonial-detail clearfix">
                                             <div class="testimonial-pic radius shadow scale-in-center">
-                                                <img src="images/testimonials/pic3.jpg" width="100" height="100"
+                                                <img src="images/testimonials/pic3.png" width="100" height="100"
                                                     alt="" />
                                             </div>
-                                            <h4 class="testimonial-name m-b5">Зайо Байо -</h4>
-                                            <span class="testimonial-position">Шпакловане</span>
+                                            <h4 class="testimonial-name m-b5">Яна Михова</h4>
+                                            <span class="testimonial-position">Ремонт на баня</span>
                                         </div>
                                         <div class="testimonial-text">
                                             <span class="fa fa-quote-right"></span>
                                             <p>
-                                                Обслужването на Любомир беше фантастично. Той беше
-                                                учтив, знаещ, трудолюбив, точен и най-важното –
-                                                вършеше страхотна работа. Силно препоръчвам услугите
-                                                му!
+                                                "Момчетата са много точни. Направиха бързо и качествено ремонта на банята ни. Запазиха чисто всичко наоколо"
                                             </p>
                                         </div>
                                     </div>
@@ -1031,20 +1022,16 @@
                                     <div class="block-shadow bg-white p-a30">
                                         <div class="testimonial-detail clearfix">
                                             <div class="testimonial-pic radius shadow scale-in-center">
-                                                <img src="images/testimonials/pic4.jpg" width="100" height="100"
+                                                <img src="images/testimonials/pic4.png" width="100" height="100"
                                                     alt="" />
                                             </div>
-                                            <h4 class="testimonial-name m-b5">Петльо Кукуто -</h4>
+                                            <h4 class="testimonial-name m-b5">Деница Ковачева</h4>
                                             <span class="testimonial-position">Цялостен ремонт на апартамент</span>
                                         </div>
                                         <div class="testimonial-text">
                                             <span class="fa fa-quote-right"></span>
                                             <p>
-                                                Определено ще използвам отново Николай! Той е супер
-                                                трудолюбив и много надежден. И не само това, а той
-                                                винаги е щастлив и наистина се радва на работата си.
-                                                Той остави апартамента ми в безупречно състояние, след
-                                                като приключи. Горещо бих го препоръчала.
+                                                "Наехме фирмата да ни направи ел. и Вик инсталациите. С удоволствие ги препоръчвам!"
                                             </p>
                                         </div>
                                     </div>
@@ -1055,20 +1042,18 @@
                                     <div class="block-shadow bg-white p-a30">
                                         <div class="testimonial-detail clearfix">
                                             <div class="testimonial-pic radius shadow scale-in-center">
-                                                <img src="images/testimonials/pic5.jpg" width="100" height="100"
+                                                <img src="images/testimonials/pic5.png" width="100" height="100"
                                                     alt="" />
                                             </div>
-                                            <h4 class="testimonial-name m-b5">Зайо Байо</h4>
-                                            <span class="testimonial-position">Средногорски</span>
+                                            <h4 class="testimonial-name m-b5">Ивайло Димитров</h4>
+                                            <span class="testimonial-position">Шпакловане и боядисване</span>
                                         </div>
                                         <div class="testimonial-text">
                                             <span class="fa fa-quote-right"></span>
                                             <p>
-                                                Определено ще използвам отново Николай! Той е супер
-                                                трудолюбив и много надежден. И не само това, а той
-                                                винаги е щастлив и наистина се радва на работата си.
-                                                Той остави апартамента ми в безупречно състояние, след
-                                                като приключи. Горещо бих го препоръчала.
+                                                Определено ще използвам отново услугите им!
+                                                Трудолюбив тийм и много надеждени. Оставиха апартамента ми в безупречно състояние, след
+                                                като приключи ремонта. Горещо бих ги препоръчал.
                                             </p>
                                         </div>
                                     </div>
@@ -1096,7 +1081,8 @@
                                 <h4 class="text-uppercase m-b10 m-t0">
                                     Абонирайте се за нашия онлайн бюлетин!
                                 </h4>
-                                <span>Никога не пропускайте специални оферти за продукти и услуги на МарНик, като се регистрирате за нашия онлайн бюлетин.</span>
+                                <span>Никога не пропускайте специални оферти за продукти и услуги на МарНик, като се
+                                    регистрирате за нашия онлайн бюлетин.</span>
                             </div>
                         </div>
 
@@ -1160,6 +1146,7 @@
                                     <li>бул. Сан Стефано 107, гр. Бургас</li>
                                     <li>info@marnikstroy.com</li>
                                     <li>088 890 4050</li>
+                                    <li>088 620 1406</li>
                                 </ul>
                             </div>
                         </div>
@@ -1171,7 +1158,7 @@
                                 <ul>
                                     <li><a href="index.html">Начало</a></li>
                                     <li><a href="about.html">За нас</a></li>
-                                    <li><a href="project-grid.html">Проекти</a></li>
+                                    <li><a href="services.html">Услуги</a></li>
                                     <li><a href="contact.html">Контакти</a></li>
                                 </ul>
                             </div>
