--- a/contact.html
+++ b/contact.html
@@ -420,7 +420,7 @@
                                 <ul>
                                     <li><a href="index.html">Начало</a></li>
                                     <li><a href="about.html">За нас</a></li>
-                                    <li><a href="project-grid.html">Проекти</a></li>
+                                    <li><a href="services.html">Услуги</a></li>
                                     <li><a href="contact.html">Контакти</a></li>
                                 </ul>
                             </div>
