--- a/services.html
+++ b/services.html
@@ -892,7 +892,7 @@
                                         <li>бул. Сан Стефано 107, гр. Бургас</li>
                                         <li>info@marnikstroy.com</li>
                                         <li>088 890 4050</li>
-                                        <li>088 890 4050</li>
+                                        <li>088 620 1406</li>
                                     </ul>
 
                                 </div>
@@ -904,7 +904,7 @@
                                     <h4 class="widget-title">Полезни връзки</h4>
                                     <ul>
                                         <li><a href="about.html">За нас</a></li>
-                                        <li><a href="project-grid.html">Проекти</a></li>
+                                        <li><a href="services.html">Услуги</a></li>
 
                                         <li><a href="contact.html">Контакти</a></li>
                                     </ul>
