--- a/about.html
+++ b/about.html
@@ -521,7 +521,7 @@
 
         <!-- FOOTER START -->
         <footer class="site-footer footer-large  footer-dark    footer-wide">
-            <div class="container">
+            <!-- <div class="container">
                 <div class="p-a30 call-to-action-wrap bg-no-repeat bg-center site-bg-primary"
                     style="background-image:url(images/background/bg-site.png);">
                     <div class="row">
@@ -553,7 +553,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- FOOTER BLOCKES START -->
             <div class="footer-top overlay-wraper">
                 <div class="overlay-main"></div>
