turnOff about company section on service page

--- a/services.html
+++ b/services.html
@@ -779,7 +779,7 @@
             </div>
             <!-- FAQ END -->
             <!-- ABOUT COMPANY SECTION START -->
-            <div class="section-full p-t80 p-b50 bg-white">
+            <!-- <div class="section-full p-t80 p-b50 bg-white">
                 <div class="container">
                     <div class="section-content ">
                         <div class="m-service-containt text-black">
@@ -818,7 +818,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- ABOUT COMPANY SECTION END -->
             <!-- CONTENT END -->
 
