add link in footer services

--- a/index.html
+++ b/index.html
@@ -918,6 +918,7 @@
                         <div class="call-us-section text-center">
                             <h4 class="m-b15">Нека да работим заедно</h4>
                             <h2 class="call-us-number m-b15 m-b0">088 890 4050</h2>
+                            <h2 class="call-us-number m-b15 m-b0">088 620 1406</h2>
                             <h4 class="call-us-address m-t0 m-b20">
                                 бул. Сан Стефано 107, гр. Бургас
                             </h4>
