--- a/services.html
+++ b/services.html
@@ -773,9 +773,6 @@
 
                 </div>
                 <!-- FAQ -->
-
-
-
             </div>
             <!-- FAQ END -->
             <!-- ABOUT COMPANY SECTION START -->
@@ -903,9 +900,9 @@
                                 <div class="widget widget_services inline-links">
                                     <h4 class="widget-title">Полезни връзки</h4>
                                     <ul>
+                                        <li><a href="index.html">Начало</a></li>
                                         <li><a href="about.html">За нас</a></li>
                                         <li><a href="services.html">Услуги</a></li>
-
                                         <li><a href="contact.html">Контакти</a></li>
                                     </ul>
                                 </div>
