--- a/index.html
+++ b/index.html
@@ -701,13 +701,13 @@
                                 </div>
                                 <div class="mt-count m-b30 text-white mt-icon-box-wraper center site-bg-dark p-a20">
                                     <div class="counter font-30 font-weight-800 m-b15 site-text-primary">
-                                        670
+                                        370
                                     </div>
                                     <h4 class="m-tb0">Доволни Клиенти</h4>
                                 </div>
                                 <div class="mt-count m-b30 text-white mt-icon-box-wraper center site-bg-dark p-a20">
                                     <div class="counter font-30 font-weight-800 m-b15 site-text-primary">
-                                        1500
+                                        820
                                     </div>
                                     <h4 class="m-tb0">Завършени Проекти</h4>
                                 </div>
@@ -1012,7 +1012,8 @@
                                         <div class="testimonial-text">
                                             <span class="fa fa-quote-right"></span>
                                             <p>
-                                                "Момчетата са много точни. Направиха бързо и качествено ремонта на банята ни. Запазиха чисто всичко наоколо"
+                                                "Момчетата са много точни. Направиха бързо и качествено ремонта на
+                                                банята ни. Запазиха чисто всичко наоколо"
                                             </p>
                                         </div>
                                     </div>
@@ -1032,7 +1033,8 @@
                                         <div class="testimonial-text">
                                             <span class="fa fa-quote-right"></span>
                                             <p>
-                                                "Наехме фирмата да ни направи ел. и Вик инсталациите. С удоволствие ги препоръчвам!"
+                                                "Наехме фирмата да ни направи ел. и Вик инсталациите. С удоволствие ги
+                                                препоръчвам!"
                                             </p>
                                         </div>
                                     </div>
@@ -1053,7 +1055,8 @@
                                             <span class="fa fa-quote-right"></span>
                                             <p>
                                                 Определено ще използвам отново услугите им!
-                                                Трудолюбив тийм и много надеждени. Оставиха апартамента ми в безупречно състояние, след
+                                                Трудолюбив тийм и много надеждени. Оставиха апартамента ми в безупречно
+                                                състояние, след
                                                 като приключи ремонта. Горещо бих ги препоръчал.
                                             </p>
                                         </div>
