--- a/about.html
+++ b/about.html
@@ -501,10 +501,7 @@
                                     style="background-image:url(images/background/line.png)">
                                     <h4 class="text-uppercase m-b20">2017-18</h4>
                                     <h4 class="m-b20">Прилеп, Карнобат</h4>
-                                    <p>Сглобяема къща... dummy text of the printing and typesetting industry. Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                                        unknown printer took a galley of type and scrambled it to make a type specimen
-                                        book. remaining essentially unchanged. </p>
+                                    <p>Сглобяема къща.</p>
                                 </div>
                             </div>
                         </div>
