changed text finance section

--- a/services.html
+++ b/services.html
@@ -72,7 +72,8 @@
                             </ul>
                         </div>
                         <div class="mt-topbar-right">
-                            <div class="appint-btn"><a href="tel:+359888904050" class="site-button">Направете Запитване</a>
+                            <div class="appint-btn"><a href="tel:+359888904050" class="site-button">Направете
+                                    Запитване</a>
                             </div>
                         </div>
                     </div>
@@ -116,7 +117,7 @@
                                             <div class="icon-xs m-b20 scale-in-center"><i class="fa fa-phone"></i></div>
                                             <div class="icon-content">
                                                 <h5 class="m-t0 font-weight-500">Телефонен номер</h5>
-                                                <p>088 890 4050</p>                               
+                                                <p>088 890 4050</p>
                                                 <p>088 620 1406</p>
                                             </div>
                                         </div>
@@ -480,13 +481,13 @@
                             </div>
 
                             <!-- extra services START  -->
-                            
+
                             <div class="col-lg-4 col-md-6 col-sm-6">
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
                                         <span class="icon-cell text-secondry"><img src="images/icon/waterproofing.png"
-                                            alt=""></span>
+                                                alt=""></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ХИДРОИЗОЛАЦИЯ</h4>
@@ -505,7 +506,7 @@
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
                                         <span class="icon-cell text-secondry"><img src="images/icon/heathproof.png"
-                                            alt=""></span>
+                                                alt=""></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ВЪНШНА ТОПЛОИЗОЛАЦИЯ
@@ -758,8 +759,8 @@
                                             <div class="icon-content text-white">
                                                 <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">Финансиране
                                                 </h4>
-                                                <p>Lorem Ipsum is simply dummy text of the printing and setting as
-                                                    Planning.</p>
+                                                <p>Предлагаме съдействие за финансиране от почти всички банкови компании
+                                                    в страната чрез CreditCenter.</p>
                                                 <a href="services.html" class="site-button-link yellow"
                                                     data-hover="Read More">Още <i
                                                         class="fa fa-angle-right arrow-animation"></i></a>
