add text help section

--- a/services.html
+++ b/services.html
@@ -740,8 +740,9 @@
                                             <div class="icon-content text-black">
                                                 <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">Съдействие
                                                 </h4>
-                                                <p>Lorem Ipsum is simply dummy text of the printing and setting as
-                                                    Planning.</p>
+                                                <p>Ще Ви помогнем с точното и правилно планиране/проектиране за всеки
+                                                    етап от предстоящия ремонт. След това ще го изпълним стъпка по
+                                                    стъпка.</p>
                                                 <a href="services.html" class="site-button-link"
                                                     data-hover="Read More">Още <i
                                                         class="fa fa-angle-right arrow-animation"></i></a>
@@ -761,8 +762,8 @@
                                                 </h4>
                                                 <p>Предлагаме съдействие за финансиране от почти всички банкови компании
                                                     в страната чрез CreditCenter.</p>
-                                                <a href="services.html" class="site-button-link yellow"
-                                                    data-hover="Read More">Още <i
+                                                <a href="tel:+359886201406" class="site-button-link yellow"
+                                                    data-hover="Read More">Обадете ни се<i
                                                         class="fa fa-angle-right arrow-animation"></i></a>
                                             </div>
                                         </div>
