add phone link help and finance section

--- a/services.html
+++ b/services.html
@@ -743,8 +743,8 @@
                                                 <p>Ще Ви помогнем с точното и правилно планиране/проектиране за всеки
                                                     етап от предстоящия ремонт. След това ще го изпълним стъпка по
                                                     стъпка.</p>
-                                                <a href="services.html" class="site-button-link"
-                                                    data-hover="Read More">Още <i
+                                                <a href="tel:+359886201406" class="site-button-link"
+                                                    data-hover="Read More">Обадете ни се <i
                                                         class="fa fa-angle-right arrow-animation"></i></a>
                                             </div>
                                         </div>
