add new text quote section services page

--- a/services.html
+++ b/services.html
@@ -539,7 +539,7 @@
                     <div class="section-content">
                         <div class="section-head m-b50 text-white text-center">
                             <h3 class="m-t0">БЕЗПЛАТЕН ОГЛЕД В РАМКИТЕ НА ГРАД БУРГАС</h3>
-                            <p>Огледи извън очертанията на град Бургас в цяла Бургаска област се заплащат 50 лева.</p>
+                            <p>Огледи извън очертанията на град Бургас в цяла Бургаска област се заплащат 0,99 лв на километър.</p>
                         </div>
                         <div class="row d-flex justify-content-center">
                             <div class="col-lg-4 col-md-6 m-b30">
