add text about page galeria

--- a/about.html
+++ b/about.html
@@ -480,10 +480,7 @@
                                     style="background-image:url(images/background/line.png)">
                                     <h4 class="text-uppercase m-b20">2023</h4>
                                     <h4 class="m-b20">Кошарица, Слънчев Бряг</h4>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                                        unknown printer took a galley of type and scrambled it to make a type specimen
-                                        book. remaining essentially unchanged. </p>
+                                    <p>Цялостна външна изолация на къща.</p>
                                 </div>
                             </div>
                         </div>
