add text Bathrooms services page

--- a/services.html
+++ b/services.html
@@ -547,8 +547,8 @@
                                 <div class="image-effect-one hover-shadow">
                                     <img src="images/services/1.jpg" alt="">
                                     <div class="figcaption">
-                                        <h4>Концепции и Дизайн</h4>
-                                        <p>Est notare quam littera gothica, quam nunc putamus parum claram.</p>
+                                        <h4>Бани и Тоалетни</h4>
+                                        <p>Цялостно изграждане и зареждане на бани.</p>
                                         <a href="services.html"><i class="link-plus site-bg-primary"></i></a>
                                     </div>
 
