add text services

--- a/services.html
+++ b/services.html
@@ -560,8 +560,8 @@
                                 <div class="image-effect-one hover-shadow">
                                     <img src="images/services/2.jpg" alt="">
                                     <div class="figcaption">
-                                        <h4>Всякакви Ремонти</h4>
-                                        <p>Est notare quam littera gothica, quam nunc putamus parum claram.</p>
+                                        <h4>Сухо строителство</h4>
+                                        <p>Окачени тавани, гипскартон, опънати тавани.</p>
                                         <a href="services.html"><i class="link-plus site-bg-primary"></i></a>
                                     </div>
 
@@ -569,12 +569,11 @@
 
                             </div>
                             <div class="col-lg-4 col-md-6 m-b30">
-
                                 <div class="image-effect-one hover-shadow">
                                     <img src="images/services/3.jpg" alt="">
                                     <div class="figcaption site-bg-dark">
                                         <h4>Грубо строителство</h4>
-                                        <p>Est notare quam littera gothica, quam nunc putamus parum claram.</p>
+                                        <p>Изграждане на основната конструкция: основи, стени, тавани и покрив.</p>
                                         <a href="services.html"><i class="link-plus site-bg-primary"></i></a>
                                     </div>
 
