add ancor to section

--- a/services.html
+++ b/services.html
@@ -304,7 +304,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-6">
+                            <div class="col-lg-4 col-md-6 col-sm-6" id="bathroom">
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
@@ -549,7 +549,7 @@
                                     <div class="figcaption">
                                         <h4>Бани и Тоалетни</h4>
                                         <p>Цялостно изграждане и зареждане на бани.</p>
-                                        <a href="services.html"><i class="link-plus site-bg-primary"></i></a>
+                                        <a href="#bathroom"><i class="link-plus site-bg-primary"></i></a>
                                     </div>
 
                                 </div>
