--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
 
     <!-- PAGE TITLE HERE -->
-    <title>МарНикСтрой | Contact 1</title>
+    <title>МарНикСтрой | Контакти</title>
 
     <!-- MOBILE SPECIFIC -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
