--- a/project-grid.html
+++ b/project-grid.html
@@ -223,13 +223,15 @@
                     <!-- PAGINATION START -->
                     <div class="filter-wrap p-b30 text-center">
                         <ul class="filter-navigation inline-navigation masonry-filter link-style  text-uppercase">
-                            <li class="active"><a data-filter="*" href="javascript:;" data-hover="All">Всички</a></li>
-                            <li><a data-filter=".cat-1" href="javascript:;" data-hover="Construction">Строителство</a>
+                            <li class="active"><a data-filter="*" href="javascript:;" data-hover="Всички">Всички</a>
                             </li>
-                            <li><a data-filter=".cat-2" href="javascript:;" data-hover="Renovation">Ремонт</a></li>
-                            <li><a data-filter=".cat-3" href="javascript:;" data-hover="Outdoor">Изолация</a></li>
-                            <li><a data-filter=".cat-4" href="javascript:;" data-hover="Interiors">Бани </a></li>
-                            <li><a data-filter=".cat-5" href="javascript:;" data-hover="Consulting">Електроинсталации</a></li>
+                            <li><a data-filter=".cat-1" href="javascript:;" data-hover="Строителство">Строителство</a>
+                            </li>
+                            <li><a data-filter=".cat-2" href="javascript:;" data-hover="Ремонт">Ремонт</a></li>
+                            <li><a data-filter=".cat-3" href="javascript:;" data-hover="Изолация">Изолация</a></li>
+                            <li><a data-filter=".cat-4" href="javascript:;" data-hover="Бани">Бани</a></li>
+                            <li><a data-filter=".cat-5" href="javascript:;"
+                                    data-hover="Електроинсталации">Електроинсталации</a></li>
                         </ul>
                     </div>
                     <!-- PAGINATION END -->
@@ -241,9 +243,10 @@
                             <div class="image-effect-two hover-shadow">
                                 <img src="images/projects/portrait/pic1.jpg" alt="">
                                 <div class="figcaption">
-                                    <h4 class="mt-tilte">Life style building</h4>
-                                    <p>We are so busy watching out for what's just ahead of us that we don't take the
-                                        time to enjoy where we are.</p>
+                                    <h4 class="mt-tilte">Банево Къща</h4>
+                                    <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте
+                                        алтерум хас ат. Суас дуис мел ид. Сит еа десеруиссе аппеллантур. Дицта цонсулату
+                                        вих ид, алии ирацундиа цонсеяуат сеа не.</p>
                                     <a href="project-detail.html" class="read-more site-button btn-effect">Още</a>
                                     <a class="mfp-link" href="images/projects/portrait/pic1.jpg">
                                         <i class="fa fa-arrows-alt"></i>
@@ -258,8 +261,9 @@
                                 <img src="images/projects/portrait/pic2.jpg" alt="">
                                 <div class="figcaption">
                                     <h4 class="mt-tilte">Central City Building</h4>
-                                    <p>We are so busy watching out for what's just ahead of us that we don't take the
-                                        time to enjoy where we are.</p>
+                                    <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте
+                                        алтерум хас ат. Суас дуис мел ид. Сит еа десеруиссе аппеллантур. Дицта цонсулату
+                                        вих ид, алии ирацундиа цонсеяуат сеа не.</p>
                                     <a href="project-detail.html" class="read-more site-button btn-effect">Още</a>
                                     <a class="mfp-link" href="images/projects/portrait/pic2.jpg">
                                         <i class="fa fa-arrows-alt"></i>
@@ -275,8 +279,9 @@
                                 <img src="images/projects/portrait/pic3.jpg" alt="">
                                 <div class="figcaption">
                                     <h4 class="mt-tilte">Nathan Brooke House</h4>
-                                    <p>We are so busy watching out for what's just ahead of us that we don't take the
-                                        time to enjoy where we are.</p>
+                                    <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте
+                                        алтерум хас ат. Суас дуис мел ид. Сит еа десеруиссе аппеллантур. Дицта цонсулату
+                                        вих ид, алии ирацундиа цонсеяуат сеа не.</p>
                                     <a href="project-detail.html" class="read-more site-button btn-effect">Още</a>
                                     <a class="mfp-link" href="images/projects/portrait/pic3.jpg">
                                         <i class="fa fa-arrows-alt"></i>
@@ -292,8 +297,9 @@
                                 <img src="images/projects/portrait/pic4.jpg" alt="">
                                 <div class="figcaption">
                                     <h4 class="mt-tilte">Metropolitan Museum.</h4>
-                                    <p>We are so busy watching out for what's just ahead of us that we don't take the
-                                        time to enjoy where we are.</p>
+                                    <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте
+                                        алтерум хас ат. Суас дуис мел ид. Сит еа десеруиссе аппеллантур. Дицта цонсулату
+                                        вих ид, алии ирацундиа цонсеяуат сеа не.</p>
                                     <a href="project-detail.html" class="read-more site-button btn-effect">Още</a>
                                     <a class="mfp-link" href="images/projects/portrait/pic4.jpg">
                                         <i class="fa fa-arrows-alt"></i>
@@ -308,8 +314,9 @@
                                 <img src="images/projects/portrait/pic5.jpg" alt="">
                                 <div class="figcaption">
                                     <h4 class="mt-tilte">Art Family Residence</h4>
-                                    <p>We are so busy watching out for what's just ahead of us that we don't take the
-                                        time to enjoy where we are.</p>
+                                    <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте
+                                        алтерум хас ат. Суас дуис мел ид. Сит еа десеруиссе аппеллантур. Дицта цонсулату
+                                        вих ид, алии ирацундиа цонсеяуат сеа не.</p>
                                     <a href="project-detail.html" class="read-more site-button btn-effect">Още</a>
                                     <a class="mfp-link" href="images/projects/portrait/pic5.jpg">
                                         <i class="fa fa-arrows-alt"></i>
@@ -324,8 +331,8 @@
                                 <img src="images/projects/portrait/pic6.jpg" alt="">
                                 <div class="figcaption">
                                     <h4 class="mt-tilte">Office Partition Walls</h4>
-                                    <p>We are so busy watching out for what's just ahead of us that we don't take the
-                                        time to enjoy where we are.</p>
+                                    <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте
+                                        алтерум хас ат. Суас дуис мел ид.</p>
                                     <a href="project-detail.html" class="read-more site-button btn-effect">Още</a>
                                     <a class="mfp-link" href="images/projects/portrait/pic6.jpg">
                                         <i class="fa fa-arrows-alt"></i>
@@ -340,8 +347,8 @@
                                 <img src="images/projects/portrait/pic7.jpg" alt="">
                                 <div class="figcaption">
                                     <h4 class="mt-tilte">Glass Office Screen</h4>
-                                    <p>We are so busy watching out for what's just ahead of us that we don't take the
-                                        time to enjoy where we are.</p>
+                                    <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте
+                                        алтерум хас ат. Суас дуис мел ид.</p>
                                     <a href="project-detail.html" class="read-more site-button btn-effect">Още</a>
                                     <a class="mfp-link" href="images/projects/portrait/pic7.jpg">
                                         <i class="fa fa-arrows-alt"></i>
@@ -356,8 +363,8 @@
                                 <img src="images/projects/portrait/pic8.jpg" alt="">
                                 <div class="figcaption">
                                     <h4 class="mt-tilte">State Hermitage Museum</h4>
-                                    <p>We are so busy watching out for what's just ahead of us that we don't take the
-                                        time to enjoy where we are.</p>
+                                    <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте
+                                        алтерум хас ат. Суас дуис мел ид.</p>
                                     <a href="project-detail.html" class="read-more site-button btn-effect">Още</a>
                                     <a class="mfp-link" href="images/projects/portrait/pic8.jpg">
                                         <i class="fa fa-arrows-alt"></i>
@@ -372,8 +379,8 @@
                                 <img src="images/projects/portrait/pic9.jpg" alt="">
                                 <div class="figcaption">
                                     <h4 class="mt-tilte">Central Florida University</h4>
-                                    <p>We are so busy watching out for what's just ahead of us that we don't take the
-                                        time to enjoy where we are.</p>
+                                    <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте
+                                        алтерум хас ат. Суас дуис мел ид.</p>
                                     <a href="project-detail.html" class="read-more site-button btn-effect">Още</a>
                                     <a class="mfp-link" href="images/projects/portrait/pic9.jpg">
                                         <i class="fa fa-arrows-alt"></i>
@@ -487,7 +494,7 @@
                         </div>
 
                         <!-- TAGS -->
-                        
+
                         <!-- NEWSLETTER -->
 
                     </div>
