add some pics and texts to project grid page

--- a/project-grid.html
+++ b/project-grid.html
@@ -260,7 +260,7 @@
                             <div class="image-effect-two hover-shadow">
                                 <img src="images/projects/portrait/pic2.jpg" alt="">
                                 <div class="figcaption">
-                                    <h4 class="mt-tilte">Central City Building</h4>
+                                    <h4 class="mt-tilte">Кошарица</h4>
                                     <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте
                                         алтерум хас ат. Суас дуис мел ид. Сит еа десеруиссе аппеллантур. Дицта цонсулату
                                         вих ид, алии ирацундиа цонсеяуат сеа не.</p>
@@ -278,7 +278,7 @@
                             <div class="image-effect-two hover-shadow">
                                 <img src="images/projects/portrait/pic3.jpg" alt="">
                                 <div class="figcaption">
-                                    <h4 class="mt-tilte">Nathan Brooke House</h4>
+                                    <h4 class="mt-tilte">Сан Стефано</h4>
                                     <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте
                                         алтерум хас ат. Суас дуис мел ид. Сит еа десеруиссе аппеллантур. Дицта цонсулату
                                         вих ид, алии ирацундиа цонсеяуат сеа не.</p>
@@ -296,7 +296,7 @@
                             <div class="image-effect-two hover-shadow">
                                 <img src="images/projects/portrait/pic4.jpg" alt="">
                                 <div class="figcaption">
-                                    <h4 class="mt-tilte">Metropolitan Museum.</h4>
+                                    <h4 class="mt-tilte">Заглавие проект Баня.</h4>
                                     <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте
                                         алтерум хас ат. Суас дуис мел ид. Сит еа десеруиссе аппеллантур. Дицта цонсулату
                                         вих ид, алии ирацундиа цонсеяуат сеа не.</p>
@@ -313,7 +313,7 @@
                             <div class="image-effect-two hover-shadow">
                                 <img src="images/projects/portrait/pic5.jpg" alt="">
                                 <div class="figcaption">
-                                    <h4 class="mt-tilte">Art Family Residence</h4>
+                                    <h4 class="mt-tilte">Заглавие на проекта Електроинсталации</h4>
                                     <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте
                                         алтерум хас ат. Суас дуис мел ид. Сит еа десеруиссе аппеллантур. Дицта цонсулату
                                         вих ид, алии ирацундиа цонсеяуат сеа не.</p>
@@ -330,7 +330,7 @@
                             <div class="image-effect-two hover-shadow">
                                 <img src="images/projects/portrait/pic6.jpg" alt="">
                                 <div class="figcaption">
-                                    <h4 class="mt-tilte">Office Partition Walls</h4>
+                                    <h4 class="mt-tilte">Заглавие на проекта?</h4>
                                     <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте
                                         алтерум хас ат. Суас дуис мел ид.</p>
                                     <a href="project-detail.html" class="read-more site-button btn-effect">Още</a>
@@ -346,7 +346,7 @@
                             <div class="image-effect-two hover-shadow">
                                 <img src="images/projects/portrait/pic7.jpg" alt="">
                                 <div class="figcaption">
-                                    <h4 class="mt-tilte">Glass Office Screen</h4>
+                                    <h4 class="mt-tilte">Заглавие Изолация</h4>
                                     <p>Яуандо луцилиус хендрерит те яуи, ат мовет салутатус волуптариа вим, виртуте
                                         алтерум хас ат. Суас дуис мел ид.</p>
                                     <a href="project-detail.html" class="read-more site-button btn-effect">Още</a>
